--- a/index.html
+++ b/index.html
@@ -143,9 +143,10 @@
   </ul>
 </div>
 <div class="sidebar-section">
-  <span class="contact-info p-name">副教授</span>
-    
-  <span class="contact-info p-name">研究兴趣：应用密码学、安全多方计算、数据安全、机器学习安全</span>
+    <span class="contact-info p-name">副教授</span>
+</div>
+<div class="sidebar-section">
+    <span class="contact-info p-name">研究兴趣：应用密码学、安全多方计算、数据安全、机器学习安全</span>
 </div>
 
           
