--- a/index.html
+++ b/index.html
@@ -147,10 +147,8 @@
         <li>
             <span class="contact-info p-name">副教授</span>
         </li>
-        <li>
-            <span class="contact-info p-name">研究兴趣：应用密码学、安全多方计算、数据安全、机器学习安全</span>
-        </li>
     </ul>
+    <p>研究兴趣：应用密码学、安全多方计算、数据安全、机器学习安全</p>
 </div>
         </aside>
         <main class="site-main" id="site-main" aria-label="Content" tabindex="1">
