--- a/index.html
+++ b/index.html
@@ -180,46 +180,36 @@
 
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
-<h1 style='mso-list:none'><span style='font-family:宋体'>简介<span lang=EN-US><o:p></o:p></span></span></h1>
+<h1 style='mso-list:none'><span style='font-family:微软雅黑'>Profile (简介)<span lang=EN-US><o:p></o:p></span></span></h1>
 
 <p class=MsoNormal style='margin-bottom:3.9pt;mso-para-margin-bottom:.25gd;text-indent:21.0pt;line-height:130%'>
-    <span style='font-size:12.0pt;line-height:130%;font-family:宋体'>
-        刘家男，工学博士，东莞理工学院特聘副研究员、网络空间安全产业学院副院长、网络空间安全系主任、高层次人才，CCF东莞监督委委员/高级会员。博士毕业于暨南大学，师从密码学领域专家翁健教授，研究方向为应用密码学、安全多方计算、数据安全等，曾在加拿大劳瑞尔大学、滑铁卢大学做合作交流访问。在IEEE TDSC、IEEE TSG、IEEE TPDS等国内外核心期刊上发表学术论文30余篇，其中CCF/中国密码学会推荐A类/B类期刊和会议、中科院SCI 1/2区期刊论文17篇。Google Scholar总被引1060次，单篇最高引用542次，被包括加拿大工程研究院院士、新加坡国家工程院院士、IEEE Fellow、ACM Fellow等在内的国内外权威学者正面引用评价。曾获中国互联网发展基金会网络安全专项基金网络安全奖学金，以通讯作者指导本科生获得第22届国际信息安全应用大会（WISA 2021）最佳论文奖，曾获广东省自然科学一等奖、广东省科技进步一等奖、广东省计算机学会优秀论文一等奖等奖励。
+    <span style='font-size:12.0pt;line-height:130%;font-family:微软雅黑'>
+        东莞理工学院特聘副研究员、网络空间安全产业学院副院长、网络空间安全系主任、高层次人才，CCF东莞监督委委员/高级会员。博士毕业于暨南大学，师从密码学领域专家翁健教授，研究方向为应用密码学、安全多方计算、数据安全等，曾在加拿大劳瑞尔大学、滑铁卢大学做合作交流访问。在IEEE TDSC、IEEE TSG、IEEE TPDS等国内外核心期刊上发表学术论文30余篇，其中CCF/中国密码学会推荐A类/B类期刊和会议、中科院SCI 1/2区期刊论文17篇。Google Scholar总被引1060次，单篇最高引用542次，被包括加拿大工程研究院院士、新加坡国家工程院院士、IEEE Fellow、ACM Fellow等在内的国内外权威学者正面引用评价。曾获中国互联网发展基金会网络安全专项基金网络安全奖学金，以通讯作者指导本科生获得第22届国际信息安全应用大会（WISA 2021）最佳论文奖，曾获广东省自然科学一等奖、广东省科技进步一等奖、广东省计算机学会优秀论文一等奖等奖励。主持国家自然科学基金青年基金、广东省自然科学基金面上项目、中国博士后科学基金面上项目、东莞市社会发展科技重点项目，作为主要研究人员参与国家自然科学基金联合基金重点项目、国家密码管理局****科研平台建设重大项目课题、科技创新2030——“新一代人工智能”重大项目子课题等重大重点项目十多项。申请国内外发明专利12项，授权10项，完成成果转化1项。
     </span></p>
+
     <p class=MsoNormal style='margin-bottom:3.9pt;mso-para-margin-bottom:.25gd;text-indent:21.0pt;line-height:130%'>
-    <span style='font-size:12.0pt;line-height:130%;font-family:宋体'>
-主持国家自然科学基金青年基金、广东省自然科学基金面上项目、中国博士后科学基金面上项目、东莞市社会发展科技重点项目，作为主要研究人员参与国家自然科学基金联合基金重点项目、国家密码管理局****科研平台建设重大项目课题、科技创新2030——“新一代人工智能”重大项目子课题等重大重点项目十多项。申请国内外发明专利12项，授权10项，完成成果转化1项。
-    </span></p>
-
-<h1 style='mso-list:none'><span style='font-family:宋体'>工作/教育经历<span lang=EN-US><o:p></o:p></span></span></h1>
-
-
-
-
-
-<h1 style='mso-list:none'><span style='font-family:宋体'>学术兼职<span lang=EN-US><o:p></o:p></span></span></h1>
-
-
-
+    <span style='font-size:12.0pt;line-height:130%;font-family:微软雅黑'>
+        I am currently an Associate Professor at Dongguan University of Technology, Vice Dean of the School of Cyberspace Security Industry, and Director of the Department of Cyberspace Security.
+        I am also a Senior Member of CCF and a member of the CCF Dongguan Supervisory Committee. 
+        I received my Ph.D. in 2020 supervised by Prof. Jian Weng in Jinan University. 
+        My research focuses on applied cryptography, secure multi-party computation, and data security. 
+        I have also conducted collaborative exchange and visiting studies at Wilfrid Laurier University and the University of Waterloo in Canada. 
+        I have published over 30 academic papers in core domestic and international journals, including IEEE TDSC, IEEE TSG, and IEEE TPDS. 
+        I have received the Cybersecurity Scholarship from the Cybersecurity Special Fund of the China Internet Development Foundation and, as corresponding author, supervised an undergraduate student who won the Best Paper Award at the 22nd International Information Security Applications Conference (WISA 2021). 
+        I have also received First Prize in Natural Science of Guangdong Province, First Prize in Science and Technology Progress of Guangdong Province, and First Prize in the Excellent Paper Award of the Guangdong Computer Society. 、
+        I have led projects such as the National Natural Science Foundation of China, the Guangdong Natural Science Foundation, the China Postdoctoral Science Foundation General Project, and the Dongguan Municipal Social Development Science and Technology Key Project. 
+    </span>
+</p>
 
 
 
-
-<h1 style='mso-list:none'><span style='font-family:宋体'>主持/参与项目<span lang=EN-US><o:p></o:p></span></span></h1>
+<h1 style='mso-list:none'><span style='font-family:微软雅黑'>Work & Education Experience (工作/教育经历)<span lang=EN-US><o:p></o:p></span></span></h1>
 
 
 
 
 
-
-
-<h1 style='mso-list:none'><span style='font-family:宋体'>科研奖励<span lang=EN-US><o:p></o:p></span></span></h1>
-
-
-
-
-
-<h1 style='mso-list:none'><span style='font-family:宋体'>发表刊物<span lang=EN-US><o:p></o:p></span></span></h1>
+<h1 style='mso-list:none'><span style='font-family:微软雅黑'>学术兼职<span lang=EN-US><o:p></o:p></span></span></h1>
 
 
 
@@ -227,7 +217,29 @@
 
 
 
-<h1 style='mso-list:none'><span style='font-family:宋体'>发明专利<span lang=EN-US><o:p></o:p></span></span></h1>
+<h1 style='mso-list:none'><span style='font-family:微软雅黑'>主持/参与项目<span lang=EN-US><o:p></o:p></span></span></h1>
+
+
+
+
+
+
+
+<h1 style='mso-list:none'><span style='font-family:微软雅黑'>科研奖励<span lang=EN-US><o:p></o:p></span></span></h1>
+
+
+
+
+
+<h1 style='mso-list:none'><span style='font-family:微软雅黑'>发表刊物<span lang=EN-US><o:p></o:p></span></span></h1>
+
+
+
+
+
+
+
+<h1 style='mso-list:none'><span style='font-family:微软雅黑'>发明专利<span lang=EN-US><o:p></o:p></span></span></h1>
               
     </div>
 
