--- a/index.html
+++ b/index.html
@@ -148,7 +148,6 @@
             <span class="contact-info p-name">副教授</span>
         </li>
     </ul>
-    <p>研究兴趣：应用密码学、安全多方计算、数据安全、机器学习安全</p>
 </div>
         </aside>
         <main class="site-main" id="site-main" aria-label="Content" tabindex="1">
@@ -201,6 +200,13 @@
     </span>
 </p>
 
+
+<h1 style='mso-list:none'><span style='font-family:微软雅黑'>Research Interests (研究兴趣)<span lang=EN-US><o:p></o:p></span></span></h1>
+<p class=MsoNormal style='margin-bottom:3.9pt;mso-para-margin-bottom:.25gd;text-indent:21.0pt;line-height:130%'>
+    <span style='font-size:12.0pt;line-height:130%;font-family:微软雅黑'>
+            Applied cryptography, secure multi-party computation, data security, machine learning security
+            应用密码学、安全多方计算、数据安全、机器学习安全
+    </span></p>
 
 
 <h1 style='mso-list:none'><span style='font-family:微软雅黑'>Work & Education Experience (工作/教育经历)<span lang=EN-US><o:p></o:p></span></span></h1>
