--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <h1 style='mso-list:none'><span style='font-family:微软雅黑'>Research Interests (研究兴趣)<span lang=EN-US><o:p></o:p></span></span></h1>
 <p class=MsoNormal style='margin-bottom:3.9pt;mso-para-margin-bottom:.25gd;text-indent:21.0pt;line-height:130%'>
     <span style='font-size:12.0pt;line-height:130%;font-family:微软雅黑'>
-            Applied cryptography, secure multi-party computation, data security, machine learning security
+            Applied cryptography, secure multi-party computation, data security, machine learning security</br>
             应用密码学、安全多方计算、数据安全、机器学习安全
     </span></p>
 
