--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <label for="nav-trigger" title="nav-trigger">
         <span class="menu-icon">
           <svg viewBox="0 0 18 15" width="18px" height="15px">
-            <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"></path>
+            <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484h2.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h25.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9h2.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h25.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15h2.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h25.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"></path>
           </svg>
         </span>
       </label>
@@ -179,7 +179,7 @@
 
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
-<h1 style='mso-list:none'><span style='font-family:微软雅黑'>Profile (简介)<span lang=EN-US><o:p></o:p></span></span></h1>
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>Profile (简介)<span lang=EN-US><o:p></o:p></span></span></h2>
 
 <p class=MsoNormal style='margin-bottom:3.9pt;mso-para-margin-bottom:.25gd;text-indent:21.0pt;line-height:130%'>
     <span style='font-size:12.0pt;line-height:130%;font-family:微软雅黑'>
@@ -198,7 +198,7 @@
 </p>
 
 
-<h1 style='mso-list:none'><span style='font-family:微软雅黑'>Research Interests (研究兴趣)<span lang=EN-US><o:p></o:p></span></span></h1>
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>Research Interests (研究兴趣)<span lang=EN-US><o:p></o:p></span></span></h2>
 <p class=MsoNormal style='margin-bottom:3.9pt;mso-para-margin-bottom:.25gd;text-indent:21.0pt;line-height:130%'>
     <span style='font-size:12.0pt;line-height:130%;font-family:微软雅黑'>
             Applied cryptography, secure multi-party computation, data security, machine learning security
@@ -209,21 +209,13 @@
 </p>
 
 
-<h1 style='mso-list:none'><span style='font-family:微软雅黑'>Work & Education Experience (工作/教育经历)<span lang=EN-US><o:p></o:p></span></span></h1>
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>Work & Education Experience (工作/教育经历)<span lang=EN-US><o:p></o:p></span></span></h2>
 
 
 
 
 
-<h1 style='mso-list:none'><span style='font-family:微软雅黑'>学术兼职<span lang=EN-US><o:p></o:p></span></span></h1>
-
-
-
-
-
-
-
-<h1 style='mso-list:none'><span style='font-family:微软雅黑'>主持/参与项目<span lang=EN-US><o:p></o:p></span></span></h1>
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>学术兼职<span lang=EN-US><o:p></o:p></span></span></h2>
 
 
 
@@ -231,13 +223,7 @@
 
 
 
-<h1 style='mso-list:none'><span style='font-family:微软雅黑'>科研奖励<span lang=EN-US><o:p></o:p></span></span></h1>
-
-
-
-
-
-<h1 style='mso-list:none'><span style='font-family:微软雅黑'>发表刊物<span lang=EN-US><o:p></o:p></span></span></h1>
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>主持/参与项目<span lang=EN-US><o:p></o:p></span></span></h2>
 
 
 
@@ -245,7 +231,21 @@
 
 
 
-<h1 style='mso-list:none'><span style='font-family:微软雅黑'>发明专利<span lang=EN-US><o:p></o:p></span></span></h1>
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>科研奖励<span lang=EN-US><o:p></o:p></span></span></h2>
+
+
+
+
+
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>发表刊物<span lang=EN-US><o:p></o:p></span></span></h2>
+
+
+
+
+
+
+
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>发明专利<span lang=EN-US><o:p></o:p></span></span></h2>
               
     </div>
 
