--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
 
 
-<h2 style='mso-list:none'><span style='font-family:微软雅黑'>主持/参与项目<span lang=EN-US><o:p></o:p></span></span></h2>
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>Projects (项目)<span lang=EN-US><o:p></o:p></span></span></h2>
 
 
 
@@ -231,21 +231,18 @@
 
 
 
-<h2 style='mso-list:none'><span style='font-family:微软雅黑'>科研奖励<span lang=EN-US><o:p></o:p></span></span></h2>
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>Awards (奖励)<span lang=EN-US><o:p></o:p></span></span></h2>
 
 
 
 
 
-<h2 style='mso-list:none'><span style='font-family:微软雅黑'>发表刊物<span lang=EN-US><o:p></o:p></span></span></h2>
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>Selected Papers/Patterns (代表性论文/专利)<span lang=EN-US><o:p></o:p></span></span></h2>
 
 
 
 
 
-
-
-<h2 style='mso-list:none'><span style='font-family:微软雅黑'>发明专利<span lang=EN-US><o:p></o:p></span></span></h2>
               
     </div>
 
