--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
     </span>
 </p>
 
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>Activities!<span lang=EN-US><o:p></o:p></span></span></h2>
+
+
 
 <h2 style='mso-list:none'><span style='font-family:微软雅黑'>Work & Education Experience (工作/教育经历)<span lang=EN-US><o:p></o:p></span></span></h2>
 
@@ -215,15 +218,15 @@
 
 
 
-<h2 style='mso-list:none'><span style='font-family:微软雅黑'>学术兼职<span lang=EN-US><o:p></o:p></span></span></h2>
-
-
-
-
-
-
 
 <h2 style='mso-list:none'><span style='font-family:微软雅黑'>Projects (项目)<span lang=EN-US><o:p></o:p></span></span></h2>
+
+
+
+
+
+
+<h2 style='mso-list:none'><span style='font-family:微软雅黑'>Reviewers & TPCs<span lang=EN-US><o:p></o:p></span></span></h2>
 
 
 
