--- a/index.html
+++ b/index.html
@@ -158,22 +158,13 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 <div class=WordSection1 style='layout-grid:15.6pt'>
-<h3 style='mso-list:none'><span style='font-family:微软雅黑'>Associate Professor (副教授), College of Computer Science and Technology, Dongguan University of Technology<span lang=EN-US><o:p></o:p></span></span></h3>
+<h4 style='mso-list:none'><span style='font-family:微软雅黑'>Associate Professor (副教授)<span lang=EN-US><o:p></o:p></span></span></h4>
+<h4 style='mso-list:none'><span style='font-family:微软雅黑'>College of Computer Science and Technology<span lang=EN-US><o:p></o:p></span></span></h4>
+<h4 style='mso-list:none'><span style='font-family:微软雅黑'>Dongguan University of Technology<span lang=EN-US><o:p></o:p></span></span></h4>
 
+
+    
 <h2 style='mso-list:none'><span style='font-family:微软雅黑'>Profile (简介)<span lang=EN-US><o:p></o:p></span></span></h2>
 
 <p class=MsoNormal style='margin-bottom:3.9pt;mso-para-margin-bottom:.25gd;text-indent:21.0pt;line-height:130%'>
